--- a/Ex2_CSS/index.html
+++ b/Ex2_CSS/index.html
@@ -34,6 +34,6 @@
     <!-- inline css-->
     <h1 style="color:#08074b;text-align:center;">Loyola Institute of Science and Technology</h1>   
     <h2 style="color:#08074b;margin-left:15px;">About LIST</h2>
-    <P>LICET – a centre of global learning, is an academic collaboration between Loyola College Society (LCS) and Institut catholique d’arts et métiers (ICAM), France and guided by the Jesuit pedagogy of education. Here, students are formed as leaders with social responsibilities. LICET is inspiringly creative in its curriculum and committed in empowering the students for the world of tomorrow. The staff and students’ exchange programmes with universities abroad give LICET a global exposure needed for national and international transformation.</P>
+    <P>LIST is a global educational Institution founded by the Loyola College Society and guided by the Jesuit pedagogy of education. Here, students are formed as leaders with social responsibilities. LIST is inspiringly creative in its curriculum and committed in empowering the students for the world of tomorrow. Excellent placements, highly experienced faculty, state-of-the-art facilities and a beautiful, green campus are few of the key reasons why LIST is one of the top instituions for persuing Engineering in Tamil Nadu.</P>
 </body>
 </html>
