Correceted a spelling mistake

--- a/Ex2_CSS/index.html
+++ b/Ex2_CSS/index.html
@@ -34,6 +34,6 @@
     <!-- inline css-->
     <h1 style="color:#08074b;text-align:center;">Loyola Institute of Science and Technology</h1>   
     <h2 style="color:#08074b;margin-left:15px;">About LIST</h2>
-    <P>LIST is a global educational Institution founded by the Loyola College Society and guided by the Jesuit pedagogy of education. Here, students are formed as leaders with social responsibilities. LIST is inspiringly creative in its curriculum and committed in empowering the students for the world of tomorrow. Excellent placements, highly experienced faculty, state-of-the-art facilities and a beautiful, green campus are few of the key reasons why LIST is one of the top instituions for persuing Engineering in Tamil Nadu.</P>
+    <P>LIST is a global educational Institution founded by the Loyola College Society and guided by the Jesuit pedagogy of education. Here, students are formed as leaders with social responsibilities. LIST is inspiringly creative in its curriculum and committed in empowering the students for the world of tomorrow. Excellent placements, highly experienced faculty, state-of-the-art facilities and a beautiful, green campus are few of the key reasons why LIST is one of the top instituions for pursuing Engineering in Tamil Nadu.</P>
 </body>
 </html>
